--- a/apps/optimal-human/src/styles.scss
+++ b/apps/optimal-human/src/styles.scss
@@ -1,6 +1,7 @@
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '~@angular/material' as mat;
+@use '~@ng-matero/extensions' as mtx;
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -258,6 +259,9 @@ $altTheme: (
 @include mat.button-typography($sf-typography-config);
 @include mat.chips-typography($sf-typography-config);
 @include mat.button-toggle-typography($sf-typography-config);
+
+@include mtx.all-component-themes($theme);
+@include mtx.all-experimental-component-themes($theme);
 
 .theme-alternate {
   @include mat.all-component-themes($altTheme);
