--- a/libs/test/test-listing/src/lib/test-listing.component.html
+++ b/libs/test/test-listing/src/lib/test-listing.component.html
@@ -16,7 +16,7 @@
         <mat-spinner class='mr-4' [diameter]='20' *ngIf='store.isLoading$ | async'></mat-spinner>
         <button mat-flat-button color='primary' class='ml-2' [routerLink]='["/tests", "create"]'>
           <mat-icon class='mr-2'>add</mat-icon>
-          {{"Add Test"}}
+          {{"Create Test"}}
         </button>
       </div>
     </div>
