--- a/libs/shared/ui/common-form-field-image/src/lib/common-form-field-image.component.html
+++ b/libs/shared/ui/common-form-field-image/src/lib/common-form-field-image.component.html
@@ -1,7 +1,7 @@
 <div class='container-fluid p-0'>
   <div class='row'>
     <ng-template [ngIf]='parentCtrl.valid && imageData' [ngIfElse]='imageSelectedElse'>
-      <div class='col-2'>
+      <div class='col-auto'>
         <img class='img-fluid'
              src='{{imageData?.croppedImage}}'
              [ngStyle]='{"maxHeight": "51px"}'>
